--- a/New/CV/style.css
+++ b/New/CV/style.css
@@ -10,5 +10,12 @@ header {
 }
 h3 {
     color: rgb(64, 64, 255);
-    font-size: 50px ;
+    font-size: 40px;
+}
+li {
+    font-size: 25px;
+    color: blueviolet;
+}
+hr {
+    border-top: 2px solid black;
 }
